# Go-Clone-Thesis

./: .gitignore  LICENSE  README.md  count_go_repos.sh
.github/workflows/: go-ast-extractor-test.yml  go-extractor-test.yml  go-func-extractor-test.yml  golangci-lint-goast.yml  golangci-lint-gofunc.yml  golangci-lint.yml
CloneDetection/: README.md
CloneDetection/GraphCodeBERT/: README.md  model.py  pyproject.toml  run.py
CloneDetection/GraphCodeBERT/parser/: DFG.py  __init__.py  build.py  build.sh  utils.py
CloneDetection/UniXcode/: example_no_finetuned.py  model.py
CloneDetection/unixcoder/: pyproject.toml
GitHubMiner/: README.md  command.sh  index.js
GitHubMiner/output/: go-repositories.csv
GoAstExtractor/: main.go
GoAstExtractor/extractor/: ast_path_extractor.go
GoCSVRepo/: README.md  main.py  pyproject.toml
GoCSVRepo/collector/: github_repo_collector.py
GoCSVRepo/collector/output/: repositories.csv  state.json
GoCSVRepo/const/: constants.py
GoCSVRepo/output/: repositories.csv
GoExtractor/: README.md  go.mod  main.go  out.txt  test.go
GoExtractor/common/: ast_node.go  node_relation.go
GoExtractor/constant/: constants.go
GoExtractor/extractor/: ast_path_extractor.go  extractor.go  extractor_test.go
GoExtractor/extractor/test_assets/: test.go
GoFuncExtractor/: README.md  go.mod  main.go
GoFuncExtractor/common/: code_fragment.go
GoFuncExtractor/func_extractor/: func_extractor.go  func_extractor_test.go
RepoExtraction/: .gitignore  README.md  extraction.sh
RepoExtraction/helpers/: function-extraction.sh
RepoFuncExtraction/: README.md  count.txt  extraction.sh
RepoFuncExtraction/helpers/: function-counter.sh
assets/: ast_path.dot
assets/diagrams/: ast.dot
ast-builder/: .golangci.yml  README.md  go.mod
ast-builder/extractor/: ast_path_extractor_test.go
clone-detection/: README.md  analysis.ipynb  analysis.py  analyzed_paths.py  analyzed_paths_count.py  build_df.py  clone-density-v2.ipynb  clone-detection.ipynb  code-sets-cross.ipynb  code.ipynb  common.py  correlation.py  df_similarities.py  df_similaritiesv2.py  evaluate.sh  fine-tune.sh  inference.sh  model-train.ipynb  model.py  normalize.py  pyproject.toml  run.py  similarities_examples.py  topics.txt
function-extractor/: .golangci.yml  README.md  go.mod
function-extractor/common/: code_fragment.go
function-extractor/func_extractor/: func_extractor.go  func_extractor_test.go
function-extractor/func_extractor/test_assets/: file.go
metadata-extraction/: README.md  go.mod  go.sum  main.go  skipped.txt
metadata-extraction/extractor/: extractor.go  github.go
metadata-extraction/model/: metadata.go
repositories-function-extraction/: README.md
topic-analysis/: README.md
topic-analysis/bertopic/: pyproject.toml  repositories-topic-modeling.ipynb
topic-analysis/description-extraction/: README.md  go.mod  main.go
topic-analysis/description-extraction/extractor/: extractor.go
topic-analysis/description-extraction/model/: RepositoryDescription.go  repository.go
topic-analysis/lda/: README.md  lda.ipynb  lda2.ipynb  pyproject.toml  repositories-topic-modeling.ipynb
topic-analysis/lda/assets/: data_topics.json  index.html  topic_assignment.json  topics.json
utils/: dupl_files_extractor.py  dupl_uploader.py  func_meta_upload.py  helper_missing.py  missing_metadata.txt  owner_folders.py  pyproject.toml  status.py  total_functions.py
