[tool.poetry]
name = "clone-detection"
version = "0.1.0"
description = ""
authors = ["Julian Benitez <julian.benitez@mail.escuelaing.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
transformers = "^4.39.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
