[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Julian Benitez <julian.benitez@mail.escuelaing.edu.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.88"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
