[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Julian Benitez <julian.benitez@mail.escuelaing.edu.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.88"
gitpython = "^3.1.43"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
