[tool.poetry]
name = "graphcodebert"
version = "0.1.0"
description = ""
authors = ["JulianBenitez <julian.benitezg99@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tree-sitter = "^0.20.4"
numpy = "^1.26.4"
torch = "^2.2.1"
transformers = "^4.38.1"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
