[tool.poetry]
name = "lda"
version = "0.1.0"
description = ""
authors = ["JulianBenitez <julian.benitezg99@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spacy = "^3.7.4"
nltk = "^3.8.1"
gensim = "^4.3.2"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
stop-words = "^2018.7.23"
pyldavis = "^3.4.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
